2007-11-28  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Fix typo.

2007-10-11  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Use AC_HELP_STRING, make the help output reflect reality, and fix
	building without libstartup-notification.

2007-08-08  Rob Bradford  <rob@openedhand.com>

	* applets/showdesktop/Makefile.am:
	* applets/startup/data/Makefile.am:
	* applets/windowselector/Makefile.am:
	Make sure various data files are included in the dist.

2007-07-22  Rob Bradford  <rob@openedhand.com>

	* applets/windowselector/windowselector.c:
	(mb_panel_applet_create):
	Fix coding style.

2007-07-13  Rob Bradford  <rob@openedhand.com>

	* applets/windowselector/windowselector.c: (update_current_app):
	Remove the use of gtk_image_clear since that is only available in 2.8
	and later.

2007-07-13  Rob Bradford  <rob@openedhand.com>

	* applets/windowselector/windowselector.c:
	(get_current_app_window), (update_current_app), (filter_func),
	(screen_changed_cb), (mb_panel_applet_create):
	Use the 'id' attribute for the windowselector to provide alternative
	display modes. Four modes are available:
	  'static-icon' which shows the same icon all the time, 
	  'dynamic-icon' which acts like the GNOME window selector with the icon 
	  changing based on the current app,
	  'name' gives just the name for the current window like the window selector 
	  in Matchbox,
	  'icon-name' is the same but with the current app icon included as
	  well.

2007-07-12  Matthew Allum  <mallum@openedhand.com>

	* applets/startup/data/hourglass-*.png
	Hopefully fix startup icons

2007-07-11  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel.c: (load_applets):

	Padding to 4.

2007-07-05  Jorn Baayen  <jorn@openedhand.com>

	* matchbox-panel/mb-panel.c: (load_applets):

	Pack applets with a padding of 3 pixels.

2007-07-05  Matthew Allum  <mallum@openedhand.com>

	* matchbox-panel/mb-panel.c:
	Request not to receive key focus on panel window.
